--- a/app/views/infos/help/agreement.scala.html
+++ b/app/views/infos/help/agreement.scala.html
@@ -5,18 +5,27 @@ title = "服务条款_食美特，爱美食爱生活"
 )(css="/assets/css/template/infos.css") {
 <div class="container common clearfix">
 
-    <div class="aside">
-        <!-- http://www.leho.com -->
-        <div class="inner">
-            <ul class="aside-nav">
-                <li class="faq help"><a href="http://www.leho.com/help/faq.html">帮助中心</a></li>
-                <li class="apply"><a href="http://www.leho.com/help/apply.html">商家申请指南</a></li>
-                <li class="jubao"><a href="http://www.leho.com/help/jubao.html">不良信息举报</a></li>
-                <li class="contact current"><a href="http://www.leho.com/help/contact.html">联系客服</a></li>
-            </ul>
+<div class="aside">
+    <!-- http://www.leho.com -->
+    <div class="inner">
+        <ul class="aside-nav">
+            <li ><a href="/help">帮助中心</a></li>
+            <li class="current"><a href="/aboutUs">关于食美特</a></li>
+            <li ><a href="/jifenbao">购物送集分宝</a></li>
+            <li ><a href="/rebate">天猫/淘宝返利</a></li>
+            <li ><a href="/shiDou">食豆攻略</a></li>
+            <li ><a href="/aboutCheckIn">签到有奖</a></li>
+            <li ><a href="/contactUs">联系我们</a></li>
+            <li ><a href="/cooperation">商务合作</a></li>
+            <li ><a href="/friends">友情链接</a></li>
+        </ul>
+        <div class="aside-contact">
+            <p><a href="/contactUs"><img src="/assets/ui/help-service.png"></a></p>
+            <p>8:30-23:00创业伤不起</p>
         </div>
-
     </div>
+
+</div>
     <div class="main agreement">
         <div class="inner">
             <div class="help-con">
