--- a/app/views/infos/help/friends.scala.html
+++ b/app/views/infos/help/friends.scala.html
@@ -4,29 +4,64 @@ user,
 title = "友情链接_食美特，爱美食爱生活"
 )(css="/assets/css/template/infos.css") {
 
-<div class="container">
-<div class="friends">
-<h2>友情链接</h2>
-<div class="friends-list">
-<h3>合作伙伴</h3>
-<ul class="textlinks clearfix">
+<div class="container common clearfix">
+    <div class="aside">
+        <!-- http://www.leho.com -->
+        <div class="inner">
+            <ul class="aside-nav">
+                <li><a href="/help">帮助中心</a></li>
+                <li ><a href="/aboutUs">关于食美特</a></li>
+                <li ><a href="/jifenbao">购物送集分宝</a></li>
+                <li ><a href="/rebate">天猫/淘宝返利</a></li>
+                <li ><a href="/shiDou">食豆攻略</a></li>
+                <li ><a href="/aboutCheckIn">签到有奖</a></li>
+                <li ><a href="/contactUs">联系我们</a></li>
+                <li ><a href="/cooperation">商务合作</a></li>
+                <li class="current"><a href="/friends">友情链接</a></li>
+            </ul>
+            <div class="aside-contact">
+                <p><a href="/contactUs"><img src="/assets/ui/help-service.png"></a></p>
+                <p>8:30-23:00创业伤不起</p>
+            </div>
+        </div>
 
-</ul>
-
-</div>
-<div class="friendApply">
-    <h3>友情链接申请</h3>
-    <p>
-        1：凡申请友情链接请先在贵网站上做好我们的链接并通知我们即可。<br>
-        2：目前食美特仅接受文字链接，将会以文字的方式放在“友情链接”页面。<br>
-        链接文字：食美特<br>
-        链接地址：http://smeite.com<br>
-        联系方式：service@@smeite.com
-    </p>
-</div>
-</div>
     </div>
-</div>
+    <div class="main friends">
+        <div class="inner">
+            <div class="help-con">
+
+                <div class="help-bd">
+                    <!-- 内容 start -->
+
+                    <h3>合作伙伴</h3>
+                    <ul class="imglinks  clearfix">
+
+                    </ul>
+
+                    <h3>友情链接</h3>
+                    <ul class="textlinks clearfix">
+
+                    </ul>
+
+                        <div class="friendApply">
+                            <h3>友情链接申请</h3>
+                            <p>
+                                1：凡申请友情链接请先在贵网站上做好我们的链接并通知我们即可。<br>
+                                2：目前食美特仅接受文字链接，将会以文字的方式放在“友情链接”页面。<br>
+                                链接文字：食美特<br>
+                                链接地址：http://smeite.com<br>
+                                联系方式：service@@smeite.com
+                            </p>
+                        </div>
+
+                    <!-- 内容 end -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 
         }{
 <script type="text/javascript">
