--- a/app/views/infos/help/help.scala.html
+++ b/app/views/infos/help/help.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User])
 @views.html.template(
 user,
-title =  "关于我们_食美特，爱美食爱生活"
+title =  "帮助中心_食美特，爱美食爱生活"
 )(css="/assets/css/template/infos.css") {
 
 <div class="container common clearfix">
@@ -10,42 +10,192 @@ title =  "关于我们_食美特，爱美食爱生活"
              <!-- http://www.leho.com -->
              <div class="inner">
                  <ul class="aside-nav">
-                     <li class="faq help"><a href="/help">帮助中心</a></li>
-                     <li class="apply"><a href="/aboutUs">关于食美特</a></li>
-                     <li class="jubao"><a href="/contactUs">联系我们</a></li>
-                     <li class="jubao"><a href="/cooperation">商务合作</a></li>
-                     <li class="contact current"><a href="/friends">友情链接</a></li>
+                     <li class="current"><a href="/help">帮助中心</a></li>
+                     <li ><a href="/aboutUs">关于食美特</a></li>
+                     <li ><a href="/jifenbao">购物送集分宝</a></li>
+                     <li ><a href="/rebate">天猫/淘宝返利</a></li>
+                     <li ><a href="/shiDou">食豆攻略</a></li>
+                     <li ><a href="/aboutCheckIn">签到有奖</a></li>
+                     <li ><a href="/contactUs">联系我们</a></li>
+                     <li ><a href="/cooperation">商务合作</a></li>
+                     <li ><a href="/friends">友情链接</a></li>
                  </ul>
                  <div class="aside-contact">
-                     <h3>在线客服</h3>
-                     <p>通过QQ、旺旺等方式为你提供免费在线咨询服务。</p>
                      <p><a href="/contactUs"><img src="/assets/ui/help-service.png"></a></p>
-                     <p>（8:30-23:00,创业伤不起啊）</p>
+                     <p>8:30-23:00创业伤不起</p>
                  </div>
              </div>
 
          </div>
-         <div class="main aboutUs">
+         <div class="main help" id="J_help">
              <div class="inner">
                  <div class="help-con">
                      <div class="help-hd">
-                         <h3>关于“食美特”</h3>
+                         <h3>帮助中心</h3>
                      </div>
                      <div class="help-bd">
                          <!-- 内容 start -->
-                         <p>食美特，爱美食爱生活 </p>
+                         <h5>新手入门<span> ------ so easy~！</span></h5>
+                         <dl>
+                             <dt><a href="javascript:;">食美特是什么，有啥优势？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+                                 </dd>
+                         </dl>
 
-                         <p>Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。
-                             我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。
-                             我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议。
+                         <dl>
+                             <dt><a href="javascript:;">如何登陆注册？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
 
-                         </p>
+                             </dd>
+                         </dl>
 
-                         <p>理念：为大众创造更美好的日常生活</p>
+                         <dl>
+                             <dt><a href="javascript:;">什么是新人见面礼？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+
+                             </dd>
+                         </dl>
+
+                         <dl>
+                             <dt><a href="javascript:;">什么是签到送集分宝？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+
+                             </dd>
+                         </dl>
+
+                         <dl>
+                             <dt><a href="javascript:;">什么是喜欢，如何喜欢？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+
+                             </dd>
+                         </dl>
+
+                         <dl>
+                             <dt><a href="javascript:;">什么是主题？如何创建主题？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+
+                             </dd>
+                         </dl>
+                         <dl>
+                             <dt><a href="javascript:;">什么是宝贝？如何发布宝贝？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+
+                             </dd>
+                         </dl>
+
+                         <!-- 邀请有奖 -->
+                          <h5>邀请有奖<span> ------ 每个奖励10元</span></h5>
+                         <dl>
+                             <dt><a href="javascript:;">什么是邀请有奖？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+
+                             </dd>
+                         </dl>
+                         <dl>
+                             <dt><a href="javascript:;">邀请有奖如何发放？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+
+                             </dd>
+                         </dl>
 
 
+                         <!-- 淘宝返利 -->
+                         <h5>淘宝/天猫返利<span> ------ 补贴家用，也是好样的^_^</span></h5>
+                         <dl>
+                             <dt><a href="javascript:;">什么是集分宝？集分宝有何用？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
 
-                         <p><a href="/forum/view/2" target="_blank">食美特团队</a></p>
+                             </dd>
+                         </dl>
+                         <dl>
+                             <dt><a href="javascript:;">如何在食美特获得集分宝？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+
+                             </dd>
+                         </dl>
+                         <dl>
+                             <dt><a href="javascript:;">什么是购物送集分宝？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+                             </dd>
+                         </dl>
+                         <dl>
+                             <dt><a href="javascript:;">什么是淘宝/天猫返利？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+                             </dd>
+                         </dl>
+                         <dl>
+                             <dt><a href="javascript:;">什么是食豆，食豆有什么用？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+
+                             </dd>
+                         </dl>
+                         <dl>
+                             <dt><a href="javascript:;">如何获得食豆？</a></dt>
+                             <dd>
+                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
+                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
+                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
+                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+
+                             </dd>
+                         </dl>
+
 
                          <!-- 内容 end -->
                      </div>
