--- a/app/views/infos/help/rebate.scala.html
+++ b/app/views/infos/help/rebate.scala.html
@@ -4,16 +4,58 @@ user,
 title =  "关于我们_食美特，爱美食爱生活"
 )(css="/assets/css/template/infos.css") {
 
-<div class="container">
-    <div class="common">
-        <h2>返利&nbsp;•&nbsp;搜索&nbsp;•&nbsp;教程</h2>
-        <div>
+<div class="container common clearfix">
 
-todo           t
+    <div class="aside">
+        <!-- http://www.leho.com -->
+        <div class="inner">
+            <ul class="aside-nav">
+                <li><a href="/help">帮助中心</a></li>
+                <li ><a href="/aboutUs">关于食美特</a></li>
+                <li ><a href="/jifenbao">购物送集分宝</a></li>
+                <li class="current"><a href="/rebate">天猫/淘宝返利</a></li>
+                <li ><a href="/shiDou">食豆攻略</a></li>
+                <li ><a href="/aboutCheckIn">签到有奖</a></li>
+                <li ><a href="/contactUs">联系我们</a></li>
+                <li ><a href="/cooperation">商务合作</a></li>
+                <li ><a href="/friends">友情链接</a></li>
+            </ul>
+            <div class="aside-contact">
+                <p><a href="/contactUs"><img src="/assets/ui/help-service.png"></a></p>
+                <p>8:30-23:00创业伤不起</p>
+            </div>
+        </div>
+
+    </div>
+    <div class="main help">
+        <div class="inner">
+            <div class="help-con">
+                <div class="help-hd">
+                    <h3>关于“食美特”</h3>
+                </div>
+                <div class="help-bd">
+                    <!-- 内容 start -->
+                    <p>食美特，爱美食爱生活 </p>
+
+                    <p>Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。
+                        我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。
+                        我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议。
+
+                    </p>
+
+                    <p>理念：为大众创造更美好的日常生活</p>
 
 
+
+                    <p><a href="/forum/view/2" target="_blank">食美特团队</a></p>
+
+                    <!-- 内容 end -->
+                </div>
+            </div>
         </div>
     </div>
+
+
 </div>
 
         }{
