add help question

--- a/app/views/infos/help/help.scala.html
+++ b/app/views/infos/help/help.scala.html
@@ -21,7 +21,7 @@ title =  "帮助中心_食美特，爱美食爱生活"
                      <li ><a href="/friends">友情链接</a></li>
                  </ul>
                  <div class="aside-contact">
-                     <p><a href="/contactUs"><img src="/assets/ui/help-service.png"></a></p>
+                     <p><a href="/contactUs"><img src="/assets/ui/help/help-service.png"></a></p>
                      <p>8:30-23:00创业伤不起</p>
                  </div>
              </div>
@@ -39,20 +39,24 @@ title =  "帮助中心_食美特，爱美食爱生活"
                          <dl>
                              <dt><a href="javascript:;">食美特是什么，有啥优势？</a></dt>
                              <dd>
-                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+                                 <p>食美特致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。 我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。 我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议和更节省的购物方式！</p>
+                                 <p>1) 小编们每天精挑细选优质商品，严格把控商品质量，质量请放心；</p>
+                                 <p>2) 食美特的网友们分享购买过的商品，如实评价，真实性请放心；</p>
+                                 <p>3) 99%的食美特宝贝都享受购物送集分宝活动。（在享受店家折扣、送集分宝的基础上，食美特还额外赠送）；</p>
+                                 <p>4) 食美特还拥有强大的<a href="/rebate">淘宝/天猫购物返利</a>功能。最高返还50%，购物成功后，无须提现，当天到账。</p>
+                                 <p>5) …… </p>
+                                 <p>6) 总之，还有很多功能等待您去挖掘。我们会不断的更新产品，建设一个透明、真实的社区，努力为网友提供更可靠的购物决策和更节省的购物方式。 </p>
+                                 <p>6) 我们说到做到！我们期待您的<a href="/forum/view/3">监督！！</a></p>
                                  </dd>
                          </dl>
 
                          <dl>
                              <dt><a href="javascript:;">如何登陆注册？</a></dt>
                              <dd>
-                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+                                 <p>食美特登陆注册非常简单，无须绑定食美特账号，甚至不需要注册食美特账号。it's so easy!</p>
+                                 <p>1) 通过QQ账号、微博账号、淘宝账号登陆即可享受所有的服务。</p>
+                                 <p>您可以在每个页面的顶部<img src="/assets/ui/help/login.png" alt="食美特注册登陆"> 点击登陆， 选择登陆方式进行登陆。<img src="/assets/ui/help/login2.png" alt="食美特注册登陆"> </p>
+                                 <p>2) 您也可以使用您的常用邮箱注册食美特账号，并使用这个邮箱登陆食美特。为了方便用户，我们不鼓励用户注册食美特账号和绑定食美特账号，您可以通过qq、微博、淘宝账号进行登陆。</p>
 
                              </dd>
                          </dl>
@@ -60,10 +64,11 @@ title =  "帮助中心_食美特，爱美食爱生活"
                          <dl>
                              <dt><a href="javascript:;">什么是新人见面礼？</a></dt>
                              <dd>
-                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+                                 <p>每个第一次登陆的用户，都可以收到1-99个集分宝，作为新人见面礼</p>
+                                 <p><img src="/assets/ui/help/new_gift.png" alt="食美特 新人见面礼"></p>
+                                 <p>1) 点击开始抽奖，系统将随机生成1-99个集分宝。抽奖结束，你需要完善支付宝账号，我们将会当天打入您的支付宝账号中 </p>
+                                 <p><img src="/assets/ui/help/new_gift2.png" alt="食美特 新人见面礼"></p>
+                                 <p>2) 您也可以放弃见面礼哦。</p>
 
                              </dd>
                          </dl>
@@ -71,22 +76,22 @@ title =  "帮助中心_食美特，爱美食爱生活"
                          <dl>
                              <dt><a href="javascript:;">什么是签到送集分宝？</a></dt>
                              <dd>
-                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
-
+                                 <p>每次签到，就赠送1-20个集分宝，100个集分宝=1元。无时间限制、无地点限制哦</p>
+                                 <p>1) 连续签到7，额外赠送7个集分宝</p>
+                                 <p>2) 连续签到15天，额外赠送15个集分宝</p>
+                                 <p>3) 连续签到30天，额外赠送30个集分宝</p>
+                                 <p>4) 连续签到60天；额外赠送100个集分宝</p>
+                                 <p>5) 连续签到100天；额外赠送200个集分宝</p>
+                                 <p>签到获取的集分宝不会立即发放，我们将以<a href="/shiDou">食豆</a>的形式保存，在积累1000个食豆后，您可以申请提取</p>
+                                 <p>备注：每天签到的人太多，我们实在没有精力一个一个的发放。亲，你可以体谅我们的难处吗？</p>
                              </dd>
                          </dl>
 
                          <dl>
                              <dt><a href="javascript:;">什么是喜欢，如何喜欢？</a></dt>
                              <dd>
-                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
-
+                                 <p>觉得某个宝贝很赞？点击喜欢，就能对喜欢的东东进行标记和收藏。</p>
+                                 <p>鼠标轻轻点击“喜欢”按钮，就能进行喜欢啦！so easy！</p>
                              </dd>
                          </dl>
 
@@ -103,16 +108,17 @@ title =  "帮助中心_食美特，爱美食爱生活"
                          <dl>
                              <dt><a href="javascript:;">什么是宝贝？如何发布宝贝？</a></dt>
                              <dd>
-                                 <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                                 <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                                 <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                                 <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+                                 <p>你在淘宝上，发现了你喜欢的商品，分享到食美特，就是我们珍贵的宝贝哦</p>
+                                 <p>1) 把宝贝的链接复制下来，在每个页面的右上角 <img src="/assets/ui/help/post_baobei.png" alt="食美特 发布宝贝"> </p>
+                                 <p>2) 将链接粘贴到发表框中，<img src="/assets/ui/help/post_baobei2.png">点击“确定”,食美特会自动抓取商品的图片和标题。</p>
+                                 <p>3) 之后你需要填写30-110字的推荐理由，选择标签，选择图片,再点击“确定”就ok啦！ </p>
+                                 <p>目前我们仅支持发布淘宝和天猫哦~</p>
 
                              </dd>
                          </dl>
 
                          <!-- 邀请有奖 -->
-                          <h5>邀请有奖<span> ------ 每个奖励10元</span></h5>
+                          <h5>邀请有奖<span> ------ 每个奖励10元哦</span></h5>
                          <dl>
                              <dt><a href="javascript:;">什么是邀请有奖？</a></dt>
                              <dd>
