--- a/app/views/infos/help/rebate.scala.html
+++ b/app/views/infos/help/rebate.scala.html
@@ -21,7 +21,7 @@ title =  "关于我们_食美特，爱美食爱生活"
                 <li ><a href="/friends">友情链接</a></li>
             </ul>
             <div class="aside-contact">
-                <p><a href="/contactUs"><img src="/assets/ui/help-service.png"></a></p>
+                <p><a href="/contactUs"><img src="/assets/ui/help/help-service.png"></a></p>
                 <p>8:30-23:00创业伤不起</p>
             </div>
         </div>
