--- a/app/views/infos/help/aboutUs.scala.html
+++ b/app/views/infos/help/aboutUs.scala.html
@@ -8,14 +8,14 @@ title =  "关于我们_食美特，爱美食爱生活"
 <div class="container common clearfix">
 
     <div class="aside">
-        <!-- http://www.leho.com -->
+
         <div class="inner">
             <ul class="aside-nav">
                 <li ><a href="/help">帮助中心</a></li>
                 <li class="current"><a href="/aboutUs">关于食美特</a></li>
                 <li ><a href="/jifenbao">购物送集分宝</a></li>
                 <li ><a href="/rebate">天猫/淘宝返利</a></li>
-                <lvotei ><a href="/shiDou">食豆攻略</a></li>
+                <li ><a href="/shiDou">食豆攻略</a></li>
                 <li ><a href="/aboutCheckIn">签到有奖</a></li>
                 <li ><a href="/contactUs">联系我们</a></li>
                 <li ><a href="/cooperation">商务合作</a></li>
