adjust checkIn with random in server,delete checkIn hover effect  and add rebate in nav

--- a/app/views/infos/help/help.scala.html
+++ b/app/views/infos/help/help.scala.html
@@ -118,25 +118,16 @@ title =  "帮助中心_食美特，爱美食爱生活"
                 <!-- 邀请有奖 -->
                 <h5>邀请有奖<span> ------ 每个奖励10元哦</span></h5>
                 <dl>
-                    <dt><a href="javascript:;">什么是邀请有奖？</a></dt>
+                    <dt><a href="javascript:;">什么是邀请有奖？奖金如何发放</a></dt>
                     <dd>
-                        <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                        <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                        <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                        <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+                        <p>邀请好友，最高可获得10元奖励，等于1000个集分宝</p>
+                        <p>1) 邀请好友必须是新用户（即以前没登录过食美特，或者没有注册过食美特），如果她已是食美特老用户了，那么是没有奖励的</p>
+                        <p>2) 您可以把您的专用邀请链接通过任何方式发给您的朋友，例如，QQ好友，qq群、阿里旺旺、论坛、社区等</p>
+                        <p>3) 邀请奖金分3次发放：当好友累计返利达到100个集分宝时奖200个；当累计返利到1000个集分宝时再奖300个；当累计返利到3000个集分宝时再奖500个集分宝；</p>
 
                     </dd>
                 </dl>
-                <dl>
-                    <dt><a href="javascript:;">邀请有奖如何发放？</a></dt>
-                    <dd>
-                        <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                        <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                        <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                        <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
 
-                    </dd>
-                </dl>
 
 
                 <!-- 淘宝返利 -->
@@ -144,39 +135,35 @@ title =  "帮助中心_食美特，爱美食爱生活"
                 <dl>
                     <dt><a href="javascript:;">什么是集分宝？集分宝有何用？</a></dt>
                     <dd>
-                        <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                        <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                        <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                        <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+                        <p>集分宝是由支付宝提供的积分服务，集分宝可以当"钱"用，100个集分宝 = 1元。</p>
+                        <p>1) 到淘宝、天猫等网站购物，付款操作进行到支付宝收银台页面时均可进行抵现操作。</p>
+                        <p>2) 集分宝付款等同您现金支付是一样的，可以返利，也算入实际支付金额内的</p>
 
                     </dd>
                 </dl>
                 <dl>
                     <dt><a href="javascript:;">如何在食美特获得集分宝？</a></dt>
                     <dd>
-                        <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                        <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                        <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                        <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
-
+                        <p>在食美特获得集分宝有多种方式，</p>
+                        <p>1) 通过食美特购物送集分宝；<a href="/jifenbao">去看看详情</a></p>
+                        <p>2) 通过淘宝/天猫返利获得集分宝；<a href="/rebate">去看看详情</a></p>
+                        <p>3) 参与邀请有奖，获得集分宝；<a href="/user/account/invite">去看看详情</a></p>
+                        <p>4) 参与每天的签到活动，赠送集分宝<a href="/user/account/invite">去看看详情</a></p>
+                        <p> …… </p>
+                        <p>我们会不定期的推出各种活动，赠送集分宝，各位亲，注意关注我们的动态哦 </p>
                     </dd>
                 </dl>
                 <dl>
                     <dt><a href="javascript:;">什么是购物送集分宝？</a></dt>
                     <dd>
-                        <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                        <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                        <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                        <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+                        <p>食美特在收录每件宝贝时，会额外赠送集分宝，当您交易成功时，当天即打入你的支付宝账号</p>
                     </dd>
                 </dl>
                 <dl>
                     <dt><a href="javascript:;">什么是淘宝/天猫返利？</a></dt>
                     <dd>
-                        <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                        <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                        <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                        <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+                        <p>当您在淘宝、天猫看见宝贝时，通过粘贴网址到食美特，将会返还一定比例的金额给您。使用食美特返利操作非常简单，只需要三步</p>
+                        <p> <img src="/assets/ui/help/3step.png"> <a href="/rebate">去看看详细情况</a> </p>
                     </dd>
                 </dl>
                 <dl>
