--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -1090,6 +1090,10 @@ input:-moz-placeholder { font-size:12px; }
       text-decoration: none;
   }
 
+#J_RebateGoodsD{
+    right:0;top:40px;display:block
+}
+
 
 /* 第三方登录设置基本信息浮层 */
 .set-box { width:360px;margin:0 auto; }
@@ -2332,6 +2336,29 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
     -o-transition: bottom 0.3s;
     _background: #92b03b url(images/checkIn-status-ie6.png) 07px -23px no-repeat;
 }
+
+#nav a.btn-rebate {
+    display: block;
+    margin: 8px 0 0 5px;
+    height: 24px;
+    overflow: hidden;
+    line-height: 24px;
+    padding: 0 12px 0 26px;
+    color: #fff;
+    background: #5ad url(images/checkIn-status.png) 07px 2px no-repeat;
+    _background: #5ad url(images/checkIn-status-ie6.png) 07px 2px no-repeat;
+}
+
+#nav a.btn-rebate:hover {
+    text-decoration: none;
+    background: #5ad url(images/checkIn-status.png) 07px -23px no-repeat;
+    transition: bottom 0.3s;
+    -webkit-transition: bottom 0.3s;
+    -moz-transition: bottom 0.3s;
+    -o-transition: bottom 0.3s;
+    _background: #5ad url(images/checkIn-status-ie6.png) 07px -23px no-repeat;
+}
+
 
 #nav a.checked {
     color: #999;
